hsreplaynet/static/styles/components.scss
/* ... */
.stream-thumbnail-default-image {
	position: relative;
	width: 100%;
	color: rgb(191, 191, 191);
	background-color: rgb(225, 225, 225);
	font-size: 3em;
	border: solid 1px rgb(191, 191, 191);

	> * {
		position: absolute;
		width: 100%;
		height: 100%;
		display: flex;
		justify-content: center;
		align-items: center;
	}
}

.error-reporter {
	margin-top: 4rem;
	font-size: 2rem;

	h1 {
		font-size: 3.5rem;
		font-weight: normal;
	}

	pre {
		font-size: 2rem;
	}
}

.rank-icon-standalone {
	display: flex;
	flex-grow: 0;
	position: relative;

	align-items: center;
	justify-content: center;

	width: 100px;
	height: 100px;

	overflow: hidden;
	margin: -10px;

	img {
		position: absolute;
		width: 100%;
		height: 100%;
		left: 0;
	}

	figcaption {
		position: absolute;
		text-align: center;
		width: 100%;
		left: 0;

		font-size: 1.8em;
		font-weight: bold;
		color: white;

		text-shadow: -1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000,
			1px -1px 0 #000;
	}
}

.dust-filter {
	padding: 10px;
	display: flex;
	position: relative;

	.dust-preset {
		height: 34px;
		opacity: 0.3;
		margin-right: 10px;
		cursor: pointer;

		&:hover {
			opacity: 0.8;
		}

		&.active,
		&.active:hover {
			opacity: 1;
		}
	}

	input {
		min-width: 0;
	}
}

.account-dropdown {
	max-width: 25em;

	> li > a {
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

ul.list-ltr,
ol.list-ltr {
	display: grid;
	grid-auto-flow: row;

	&.list-ltr-2 {
		grid-template-columns: auto auto;
		grid-column-gap: 40px;
	}

	@media (max-width: 991px) {
		&.list-ltr-2 {
			grid-template-columns: auto;
		}
	}
}

.list-group-no-margin {
	margin: 0;
}

.progress-indicator {
	display: flex;
	flex-direction: row;
	align-items: center;

	.progress-indicator-step {
		display: block;
		height: 14px;
		width: 14px;
		border-radius: 50%;
	}

	.progress-indicator-join {
		flex-grow: 1;
		height: 6px;
		margin: 0 -1px;
	}

	> * {
		background-color: #aaa;
		z-index: 0;

		&.active {
			background-color: $red;
			z-index: 1;

			&.current {
				background-color: #aaa;
				z-index: 1;
				border: solid 3px $red;

				&:last-child {
					background-color: $red;
				}
			}
		}
	}
}

.slot-machine {
	display: block;
	overflow: hidden;
	height: 1.45em;

	> ul {
		position: relative;
		padding-left: 0;
		margin-bottom: 0;
		transition: top ease-in-out 0.6s;
		height: 100%;

		> li {
			list-style-type: none;
			white-space: nowrap;
			height: 100%;
		}
	}
}

.carousel {
	width: 100%;
	overflow: hidden;

	.carousel-window {
		position: relative;
		white-space: nowrap;
		height: 100%;
		width: 100%;
		transition: left ease-in-out 0.5s 0.3s;
	}

	.carousel-panel {
		display: inline-block;
		white-space: normal;
		position: relative;
		height: 100%;
		width: 100%;
	}
}

.panel-card {
	padding: 5px;
	display: flex;
	flex-direction: column;

	.panel-header {
		width: calc(100% + 2px);
		margin: 0 -1px;
		font-size: 1.4em;
		padding: 8px;
		font-variant: small-caps;
		font-weight: bold;
		border-radius: 1px;
		z-index: 1;
		font-family: "Montserrat", sans-serif;

		.btn {
			border: 1px solid rgba(0, 0, 0, 0.1);
			background: rgba(255, 255, 255, 0.3);
			color: white;

			&.active {
				background: rgba(255, 255, 255, 0.4);
				text-decoration: underline;
				font-weight: bold;
			}

			&:hover {
				background: rgba(255, 255, 255, 0.5);

				&.active {
					background: rgba(255, 255, 255, 0.4);
				}
			}
		}
	}

	.panel-content {
		flex: 1;
		border-radius: 0 0 3px 3px;
		overflow: hidden;

		&.no-header {
			border-radius: 3px;
		}
	}

	.panel-header,
	.panel-content {
		box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
	}

	&.panel-theme-light {
		color: black;

		.panel-content {
			background: $offwhite;
		}
	}

	&.panel-theme-dark {
		color: white;

		.panel-content {
			background: $spacegray;
		}
	}

	&.panel-accent-blue {
		.panel-header {
			background: $blue;
			color: white;
		}

		.panel-content {
			border: 1px solid $blue;
		}
	}

	&.panel-accent-red {
		.panel-header {
			background: $red;
			color: white;
		}

		.panel-content {
			border: 1px solid $red;
		}
	}

	&.panel-accent-premium {
		.panel-header {
			background: $premium;
			color: black;

			.btn {
				color: black;
			}
		}

		.panel-content {
			border: 1px solid $premium;
		}
	}
}

.card-fade-container {
	position: relative;
	width: 100%;
	height: 100%;
	overflow: hidden;

	.card-art {
		flex: 1 1 0;
		height: 100%;
		width: 100%;
		background-position-x: center;
		background-position-y: center;
		position: absolute;

		&.flipped {
			transform: scaleX(-1);
		}

		&:nth-of-type(1) {
			left: -25%;
		}

		&:nth-of-type(2) {
			right: -25%;
			-webkit-mask-image: -webkit-gradient(
				linear,
				left top,
				right top,
				color-stop(0, rgba(0, 0, 0, 0)),
				color-stop(15%, rgba(0, 0, 0, 0)),
				color-stop(35%, rgba(0, 0, 0, 1)),
				color-stop(100%, rgba(0, 0, 0, 1))
			);

			&.flipped {
				-webkit-mask-image: -webkit-gradient(
					linear,
					right top,
					left top,
					color-stop(0, rgba(0, 0, 0, 0)),
					color-stop(15%, rgba(0, 0, 0, 0)),
					color-stop(35%, rgba(0, 0, 0, 1)),
					color-stop(100%, rgba(0, 0, 0, 1))
				);
			}
		}
	}

	.fade {
		height: 70px;
	}
}

